--- a/kbase.yml
+++ b/kbase.yml
@@ -8,7 +8,7 @@ service-language:
     python
 
 module-version:
-    2.0.1
+    2.0.2
 
 owners:
-    [pranjan77, msneddon, dylan, umaganapathyswork]
+    [pranjan77, gaprice, dylan]
